# github-actions-execution-time-collector

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md
.github/: dependabot.yml
.github/workflows/: ci.yaml  release.yaml
src/: cli.rs  gateway.rs  infrastructure.rs  main.rs  model.rs  repository.rs
