[package]
name = "github-actions-execution-time-collector"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
async-trait = "0.1.53"
chrono = "0.4.19"
clap = { version = "3.1.11", features = ["yaml"] }
csv = "1.1.6"
futures = "0.3"
indicatif = { version = "0.16.2", features = ["rayon"] }
regex = "1.5.5"
reqwest = { version = "0.11.10", features = ["blocking", "json", "rustls"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = { version = "1.0.79", default-features = false, features = ["alloc"] }
tokio = { version = "1", features = ["full"] }
openssl = { version = "0.10", features = ["vendored"] }
