[package]
name = "github-actions-execution-time-collector"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
async-trait = "0.1.59"
chrono = "0.4.23"
clap = "4.0.29"
csv = "1.1.6"
futures = "0.3.25"
indicatif = { version = "0.17.2", features = ["rayon"] }
regex = "1.7.0"
reqwest = { version = "0.11.13", features = ["blocking", "json", "rustls"] }
serde = { version = "1.0.149", features = ["derive"] }
serde_json = { version = "1.0.89", default-features = false, features = ["alloc"] }
tokio = { version = "1.24.2", features = ["full"] }
openssl = { version = "0.10.44", features = ["vendored"] }
